--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -1,97 +1,141 @@
 {% extends "layout.html" %}
 {% block body %}
   <br><br><br>
-  <div class="wrapper" style="margin-left: 40px; margin-right: 40px;">
-    <div class="col-item" style="width: 64%">
-      <a href="https://imaginecommunications.com/"><img src="../static/images/imagine.png"  style="float: right; max-width: 230px; margin-right: 100px; margin-top: 30px;" alt="Imagine Communications Logo"></a>
-      <h1 style="color: #72A276;">DevOps Software Developer</h1> 
-      <h2 style="color: #1C6E8C;">Imagine Communications</h2>
+  <div class="container">
+    <img src="/static/images/JOBS.png" class="img-fluid" alt="Responsive image">
+  </div>
+  <br><br>
+  <div class="container">
+    <div class="row" > 
+      <p>Quick disclaimer that there are a lot of words on this page! Shorter summaries can certainly be found in my resume, but I wanted to leave these here as diaries and capsules about everything I’ve learned in detail as well as key takeaways from my experiences. Enjoy!</p>
     </div>
-    <div class="col-item" style="width: 34%">
-      <h1 style="color: #72A276;">PATH Student (TA)</h1>
-      <h2 style="color: #1C6E8C;">St. Joseph Secondary School</h2>
+    <br><br>
+    <!-- rocket lab -->
+    <div class="row" >
+      <div class="col-2">
+        <a href="https://www.rocketlabusa.com/"><img src="/static/images/RL.png" class="img-fluid" alt="Responsive image"></a>
+      </div>
+      <div class="col">
+        <h1 style="color: #72A276;">Rocket Lab</h1> 
+        <h2 style="color: #1C6E8C;">Electrical Engineer</h2>
+        <p>I’m heading to Rocket Lab in the fall for an electrical engineering internship. I’m beyond excited to take my love for aerospace to a professional workplace, and get to work on designs for star trackers and reaction wheels!</p>
+      </div>
     </div>
-    <div class="col-item" style="width: 64%">
-      <p>
-        I just completed my first co-op term at Imagine Communications. 
-        I learned so much this term, and not just in technical aspects. 
-        Being in the workspace (though remotely) allowed me to learn from other professionals by example, 
-        which I found to be incredibly beneficial. I witnessed my coworkers <b>problem solve</b>, and began to use 
-        their techniques when I ran into issues. I also learnt the importance of keeping your code neat and
-        <b>organized</b>. I was only able to look at other people's work and understand it enough to make 
-        additions because they left thorough documentation and well commented code behind. Finally, working 
-        in this team environment definitely enabled me to become a better <b>communicator</b>. Attending stand up 
-        meetings allowed me to practice speaking clearly and concisely and was something I became increasingly 
-        more comfortable with as the term progressed.
-      </p>
-      <p>
-        I also wanted to involve myself in out of work activities so I joined the <b>social comittee</b>. 
-        I helped organize and host a few events like a trivia night and a board game night which were a lot of fun. 
-        The community at Imagine was awesome, which was definitely part of the reason I enjoyed this term so much. 
-        I hope to continue being involved in similar initiatives in future positions.
-      </p>
-      <p>
-        On the technical side, I became more comfortable with many more frameworks and programming languages. 
-        I worked a lot with <b>Jenkins</b>, <b>Terraform</b>, and <b>Ansible</b>, and became familiar with <b>groovy</b> and <b>YAML file syntax</b>. 
-        I also used a <b>linux</b> machine as my primary development box, and have become proficient at using its command line. 
-        Moreover, I also learned to use tools like <b>Docker</b> and <b>Kubernetes</b>, which we used for deployments. 
-        Additionally, I spent some time experimenting with Powershell cmdlets, and gained experience using 
-        both <b>Powershell</b> and <b>C#</b>. Lastly, since it was my first time programming in a team environment, I also 
-        learned to use <b>Git</b>, this knowledge is now something I utilize for all of my projects. It was a lot to learn in a short time, but as a result, I find the prospect of learning a large amount 
-        of new things for future roles much less daunting.
-      </p>
-    </div>
-    <div class="col-item" style="width: 34%">
-      <p>
-        My high school offered a co-op opportunity for all Grade 12 students, which was to be a PATH student, 
-        or <b>Teaching Assistant</b>, for a Grade 9 or 10 class. My favourite classes in high school were my <b>computer 
-        engineering</b> courses, so I decided to become a PATH student for the Grade 10 version of the course. I had 
-        a lot of fun making lesson plans, teaching my students about computer history in interesting ways, 
-        showing them the real world applications of the circuit boards we made, and more. We covered a range 
-        of topics including <b>binary</b>, <b>circuit components</b>, <b>logic gates</b>, <b>basic programming principles</b>, and I pushed 
-        them to put their knowledge to use by guiding them to design solar power alarm clock circuits on Tinkercad, 
-        creating a binary counter with MultiMedia Logic, programming robots using VEX Robotics resources, and completing other similar projects. 
-      </p>
-      <p>
-        My <b>passion for engineering</b> really grew during this time, and it helped me confirm that this was 
-        the field I wanted to enter. I also learned a lot myself while making each new lesson plan, it was a very valuable 
-        experience that I am so glad to have had. 
-      </p>
-    </div>
-  </div> 
-  <br>
-  <div class="row" style="width: 100%;">
-    <div class="col-sm-6" style="width: 24%; margin-left: 40px">
-      <div class="card">
-        <img src="../static/images/gamenight.png" class="card-img-top" alt="Screenshot from a game of Catan">
-        <div class="card-body">
-          <p class="card-text">Screenshot from the office game night!</p>
+    <!-- ceti -->
+    <div class="row" >
+      <div class="col-2">
+        <a href="https://www.projectceti.org/"><img src="/static/images/ceti.png" class="img-fluid" alt="Responsive image"></a>
+      </div>
+      <div class="col">
+        <div class="row">
+          <h1 style="color: #72A276;">Harvard Microrobotics Labaratory (Project CETI)</h1> 
+          <h2 style="color: #1C6E8C;">Embedded Software / Electrical Engineer</h2>
+          <p>Much of the engineering team on Project CETI works out of the Harvard Microrobotics Laboratory in Boston, MA which is where I was lucky enough to be this term. Project CETI is an initiative worked on by groups all around the world and tested in Dominica that aims to understand sperm whale communication. Tags are attached to whales via suction cups to collect audio data as well as other telemetry, which is the part I worked on.</p>
+          <p>I was really able to expand my toolbox of technologies in this role, and am really happy I was encouraged to take photos to look back at. My time there can be summed up in four parts.</p>
+          <p>For tag recovery, whale tags have a GPS antenna and module on them. In the beginning I worked on characterizing different antennas with the mechanical team who would perform waterproofing, and also evaluated the possibility of using an Iridium module. Much of this work allowed me to delve into RF and learn to use a VNA. As an extension of this, I recommended the addition of an LNA to our path and after iterating twice, allowed us to see the 15 dB gain promised by the LNA (pictures below). Field testing post this addition showed very reliable signal lock. This taught me about signal integrity and RF hardware best practices. Then, I helped out with audio localization experiments done with three hydrophones, giving me some background on DSP, filtering, and cross correlation. Finally, I wrote firmware for our MAX17320 BMS chip that was to monitor a 2S pack of Li-Po batteries.</p>
+          <p>I had so much fun at this internship. My technical knowledge grew immensely and I gained the ability to pick up skills and concepts much faster than I used to. I also learned more about my goals, which are to keep broadening my skillsets beneath the umbrellas of hardware and firmware, but also to do work that excites me and allows us to learn more about our universe.</p>
+          <p>I’ve also linked a TED video about the initiative <a href="https://www.ted.com/talks/david_gruber_and_shane_gero_how_advanced_is_whale_talk">here.</a></p>
+        </div>
+        <div class="row" >
+          <div class="col">
+            <div class="card">
+              <img src="../static/images/hv_2.png" class="card-img-top" alt="">
+              <div class="card-body">
+                <p class="card-text">GPS Schematic</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="../static/images/hv_1.png" class="card-img-top" alt="">
+              <div class="card-body">
+                <p class="card-text">LNA Layout</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="../static/images/hv_3.png" class="card-img-top" alt="">
+              <div class="card-body">
+                <p class="card-text">LNA Testing</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <div class="col-sm-6" style="width: 24%">
-      <div class="card">
-        <img src="../static/images/binary.jpg" class="card-img-top" alt="Screenshot from my lesson on binary">
-        <div class="card-body">
-          <p class="card-text">Excerpt from my PATH binary lesson.</p>
+    <!-- onsemi -->
+    <div class="row" >
+      <div class="col-2">
+        <a href="https://www.onsemi.com/"><img src="/static/images/onsemi.png" class="img-fluid" alt="Responsive image"></a>
+      </div>
+      <div class="col">
+        <h1 style="color: #72A276;">onsemi</h1> 
+        <h2 style="color: #1C6E8C;">Embedded Software Developer</h2>
+        <p>My time as an Embedded Software Developer at onsemi was another incredibly fruitful experience. It was my first time more directly contributing to a consumer facing product and primarily working to improve a product rather than create one. This came with some differences, namely placing much more weight on smaller decisions in code. I really enjoyed this aspect as often in my own projects my primary goal is getting my idea working, as opposed to creating the best possible version, at least at first. It definitely made me a better developer and the difference in my thought process when writing now is very apparent.</p>
+        <p>My biggest contribution was a ‘Bluetooth Low Energy (BLE) Scan & Connect’ sample app in the SDK of a dual mode radio/Bluetooth SoC (ARM Cortex-M3 based) frequently used in hearing aid devices. I also made multiple improvements to tracing and logging tools within the SDK. I was able to interface with more tools and technologies including Bluetooth, DMA, NVIC, and GDB commands. Additionally, I also worked frequently with UART and lab equipment (oscopes, logic analyzers, etc.) this term.</p>
+        <p>Coming out of this experience I’m definitely more mindful of decisions I make, especially in software, and became much more confident working with memory, microprocessor architecture, etc.</p>
+      </div>
+    </div>
+    <!-- miovision -->
+    <div class="row" >
+      <div class="col-2">
+        <a href="https://miovision.com/"><img src="/static/images/mio.png" class="img-fluid" alt="Responsive image"></a>
+      </div>
+      <div class="col">
+        <h1 style="color: #72A276;">Miovision</h1> 
+        <h2 style="color: #1C6E8C;">Firmware Developer</h2>
+        <p>At Miovision I worked as a Firmware Developer. I was excited about it because I thought ‘hey, I’ve written firmware before’ but I’m happy to report I walked away from this experience knowing the knowledge I came in with was about 5% of what I knew at the end. </p>
+        <p>I was and still am so thrilled by their mission as well: Miovision specializes in traffic control, and after installing hardware at intersections, works with cities to make roads more safe and efficient.</p>
+        <p>This internship was where I got my first taste of product ownership. My goal was to build a fixture for the production team that would allow them to test and calibrate 8 cameras simultaneously after they’d undergone stress testing. I built this with an NVIDIA Rudi-AGX and different tools like OpenCV, GStreamer, SCPI commands, V4L2 controls, and more. I programmed mainly in C & Python for the backend and JavaScript (Vue framework) for the frontend and also got much more experience working with communication protocols.</p>
+        <p>It was also a truly interdisciplinary project and allowed me to see how a mechatronics degree is useful in the workplace. I worked closely with the mechanical engineers to discuss ports and how the physical fixture would match what an operator is interacting with, I debated calibration algorithms (eventually settling on particle swarm optimization) with the software team, and frequently got feedback from the operators themselves, allowing me to present a finished product by the end of the term.</p>
+      </div>
+    </div>
+    <!-- imagine comms -->
+    <div class="row" >
+      <div class="col-2">
+        <a href="https://imaginecommunications.com/"><img src="/static/images/imagine.png" class="img-fluid" alt="Responsive image"></a>
+      </div>
+      <div class="col">
+        <h1 style="color: #72A276;">Imagine Communications</h1> 
+        <h2 style="color: #1C6E8C;">DevOps Software Developer</h2>
+        <p>I completed my first co-op position at Imagine Communications, a company that works in the broadcasting field out of Waterloo, ON. Looking back on this experience, I can’t believe how much I learned in such a short time.</p>
+        <p>I worked as a DevOps Software Developer here, so I was quickly challenged with mastering many tools: Terraform, Ansible, the Linux command line, Jenkins, Docker, Kubernetes, Git, and more. I also had new syntax to pick up: YAML, bash/PowerShell scripting, C#, & Groovy. I value this experience so much because I learned a lot about how a product scales, gets tested, gets distributed, and is worked on by hundreds of individuals. Before, I only had practice tinkering on my own, so this was truly eye opening. Even though it’s not the work I do now, when I’m leading a project or contributing to its growth I have a much better idea of the bigger picture and how an idea can become a finished and marketable product.</p>
+        <p>Huge shoutout to the community here as well, I completed this co-op remotely due to COVID but daily board game lunches online kept it really enjoyable throughout the term.</p>
+      </div>
+    </div>
+    <!-- path -->
+    <div class="row" >
+      <div class="col-2">
+        <a href="https://www.mississauga.com/life/path-changes-student-perspectives/article_c8b54b0e-346d-5606-9115-5af5d084b2fe.html"><img src="/static/images/SJSS.png" class="img-fluid" alt="Responsive image"></a>
+      </div>
+      <div class="col">
+        <div class="row" >
+          <h1 style="color: #72A276;">St. Joseph Secondary School</h1> 
+          <h2 style="color: #1C6E8C;">PATH Student (TA)</h2>
+          <p>One of the main reasons I cherish my high school experience so much is their introduction of the PATH program that allowed 12th graders to essentially become a ‘TA’ for a course. The computer engineering courses I took in Grade 11 & 12 were life changing for me, so choosing to TA the Grade 10 version of the course was a no brainer for me. My excitement about the ordeal gained me a lot of free reign from my supervisor, with that I designed lesson plans and projects surrounding computer history, binary, circuit components, logic gates, basic programming principles, and more. Example projects shown below include a 7 segment LED controlled by pushbuttons and a solar powered alarm clock circuit that features a 555 timer.</p>
+          <p>My excitement about hardware, programming, and engineering in general grew tenfold during this time and it helped me confirm this is what I wanted to do. I learned how to take feedback from students and improve, how to design projects for different levels of background knowledge, and perhaps most importantly, how to communicate technical information effectively.</p>
+        </div>
+        <div class="row" >
+          <div class="col">
+            <div class="card">
+              <img src="../static/images/bb_real.png" class="card-img-top" alt="Photo of Seven Segment LED Project">
+              <div class="card-body">
+                <p class="card-text">Seven Segment LED Project</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="../static/images/tinkercad.png" class="card-img-top" alt="Screenshot of solar alarm clock circuit on Tinkercad">
+              <div class="card-body">
+                <p class="card-text">Solar Alarm Clock project on Tinkercad.</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <div class="col-sm-6" style="width: 24%">
-      <div class="card">
-        <img src="../static/images/tinkercad.jpg" class="card-img-top" alt="Screenshot of solar alarm clock circuit on Tinkercad">
-        <div class="card-body">
-          <p class="card-text">Solar Alarm Clock project on Tinkercad.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6" style="width: 24%">
-      <div class="card">
-        <img src="../static/images/vex.jpg" class="card-img-top" alt="Snippet of code from VR Vex">
-        <div class="card-body">
-          <p class="card-text">Snippet of the VEX robot code.</p>
-        </div>
-      </div>
-    </div>
-  </div> <br><br><br>
+  </div>
+<br><br><br>
 {% endblock %}
