--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
 		<br><br><br>
 		<h1 class="text-center">Hi!</h1>
 		<p class="lead text-center">My name is Shanaya Barretto, nice to meet you!</p>
-		<p class="text-center">I am a 2021 Schulich Leader studying Mechatronics Engineering at the University of Waterloo.</p>
-		<p class="text-center">I love working with both hardware and software, and strive to solve real world problems with the knowledge I accumulate.</p>
+		<p class="text-center">I'm a third year mechatronics engineering student at the University of Waterloo.</p>
+		<p class="text-center">I am excited by complex challenges in the realms of hardware design & firmware, and I'm passionate about using my skills to learn more about our universe 🚀</p>
 	</div>
 	<div style="height: 58%; width: 100%; margin: 0;" id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
 		<div class="carousel-indicators">
@@ -14,6 +14,7 @@
 		  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
 		  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
 		  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+		  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
 		</div>
 		<div style="height: 100%; width: 100%; margin: 0;" class="carousel-inner">
 		  <div class="carousel-item active">
@@ -24,17 +25,24 @@
 			</div>
 		  </div>
 		  <div class="carousel-item">
+			<img src="../static/images/esa3_banner.jpg" class="d-block w-100" alt="Image from my trip to Amsterdam for an ESA Workshop">
+			<div class="carousel-caption d-none d-md-block">
+			  <h5>ESA's Fly Your Satellite 4 Workshop</h5>
+			  <p>2024</p>
+			</div>
+		  </div>
+		  <div class="carousel-item">
+			<img src="../static/images/team_rob.jpg" class="d-block w-100" alt="Image from a FIRST Robotics Competition">
+			<div class="carousel-caption d-none d-md-block">
+			  <h5>FIRST Robotics Competition</h5>
+			  <p>2020</p>
+			</div>
+		  </div>
+		  <div class="carousel-item">
 			<img src="../static/images/kennedymain.jpg" class="d-block w-100" alt="Image from my Kennedy Space Center trip">
 			<div class="carousel-caption d-none d-md-block">
 			  <h5>Kennedy Space Center</h5>
 			  <p>2019</p>
-			</div>
-		  </div>
-		  <div class="carousel-item">
-			<img src="../static/images/robotics.jpg" class="d-block w-100" alt="Image from a FIRST Robotics Competition">
-			<div class="carousel-caption d-none d-md-block">
-			  <h5>FIRST Robotics Competition</h5>
-			  <p>2020</p>
 			</div>
 		  </div>
 		  <div class="carousel-item">
