--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-site-verification" content="m3AOT5kHAV066ACyH8encQJ5MAtY4yviyi15WZNYuJg" />
         <title>Shanaya Barretto</title>
-        <link rel="icon" type="image/x-icon" href="/static/images/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="/static/images/icon.png">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link href="../static/style.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -24,16 +24,16 @@
                             <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('projects') }}">Projects</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('clubs') }}">Extracurriculars</a>
+                          <a class="nav-link" href="{{ url_for('about') }}">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('jobs') }}">Work Experience</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('hobbies') }}">Hobbies</a>
+                          <a class="nav-link" href="{{ url_for('clubs') }}">Design Teams / Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('resume') }}">Resume</a>
                         </li>
                     </ul>
                 </div>
@@ -46,17 +46,17 @@
             <li class="nav-item">
               <a class="nav-link" href="https://www.linkedin.com/in/shanayabarretto/">LinkedIn</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="https://youtu.be/6pdLivuMACE">Project Video</a>
-            </li>
+            </li> -->
             <li class="nav-item">
-              <a class="nav-link" href="mailto:ssbarret@uwaterloo.ca">Contact me!</a>
+              <a class="nav-link" href="mailto:ssbarret@uwaterloo.ca">📧 : ssbarret@uwaterloo.ca</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://github.com/shanayabarretto">Github</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://schulichleaders10.com/students/shanaya-barretto/">Schulich Profile</a>
+              <a class="nav-link" href="https://schulichleaders10.com/students/shanaya-barretto/">Schulich Leader Profile</a>
             </li>
           </ul>
         </div>
